--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 ext {
-    jedaiVersion = '4.5.6'
+    jedaiVersion = '4.8.1'
 }
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
+
     defaultConfig {
         applicationId "com.anagog.jedaicleanplayground"
         minSdkVersion 21
@@ -23,12 +25,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug{
+        debug {
             buildConfigField "String", "jedaiVersion", "\"$jedaiVersion\""
         }
     }
 }
-
 
 repositories {
     maven {
@@ -42,12 +43,20 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
 
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation('com.google.android.gms:play-services-maps:16.1.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation('com.google.android.gms:play-services-location:16.0.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation('com.google.firebase:firebase-core:16.0.9') {
+        exclude group: 'com.android.support'
+    }
     implementation 'com.google.maps.android:android-maps-utils:0.5'
 
     implementation "com.anagog.jedai:core:$jedaiVersion"
+    implementation "com.anagog.jedai:common:$jedaiVersion"
+    implementation "com.anagog.jedai:smartpoi:$jedaiVersion"
 }
 
 apply plugin: 'com.google.gms.google-services'
